tests/error/linear_errors/borrow_branch_leak.err
Error: Drop violation (at $FILE:8:4)
  | 
6 | @guppy
7 | def foo(b: bool) -> None:
8 |     q = qubit()
  |     ^ Variable `q` with non-droppable type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
